[package]
name = "udpt-rs"
version = "3.1.2"
authors = ["Naim A. <naim@abda.nl>"]
description = "High performance torrent tracker"
edition = "2021"

[profile.release]
lto = "fat"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
bincode = "1.3"
warp = {version = "0.3", default-features = false}
tokio = {version = "1.19", features = ["macros", "io-util", "net", "time", "rt-multi-thread", "fs", "sync", "signal"]}
binascii = "0.1"
toml = "0.7"
clap = "3.2"
log = {version = "0.4", features = ["release_max_level_info"]}
fern = "0.6"
serde_json = "1.0"
async-compression = {version = "^0.3.8", features = ["bzip2", "tokio"]}
chrono = "0.4"
